--- a/Quadrature example.ipynb
+++ b/Quadrature example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ad594169",
+   "id": "9da288d1",
    "metadata": {},
    "source": [
     "# Approximating integrals on fractals\n",
@@ -14,13 +14,16 @@
     "$$\n",
     "\\frac{\\int_{\\Gamma_1}\\int_{\\Gamma_2} f(x,y)\\mathrm{d}\\mathcal{H}^{d_2}(y)\\mathrm{d}\\mathcal{H}^{d_1}(x)}{\\mathcal{H}^{d_1}(\\Gamma)\\mathcal{H}^{d_2}(\\Gamma)}.\n",
     "$$\n",
-    "In $\\S1$ we will focus on smooth $f$, and in $\\S2$ weakly singular $f$ will be demonnstrated."
+    "\n",
+    "The ideas presented in this tutorial are all based on the work of [this paper](http://arxiv.org/abs/2112.11793).\n",
+    "\n",
+    "In $\\S1$ of this tutorial we will focus on smooth $f$, and in $\\S2$ weakly singular $f$ will be demonnstrated. But first, let's understand some basic principles of this Julia toolbox."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2463663b",
+   "id": "d1325445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23156c8f",
+   "id": "e5a3121c",
    "metadata": {},
    "source": [
     "First, let's encode an iterated function system (IFS) describing some fractal attractor $\\Gamma$. For a set $E\\subset\\mathbb{R}^n$, $n\\in\\mathbb{N}$, this will be of the form\n",
@@ -47,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b0ac8e4",
+   "id": "a93be66e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26c2b814",
+   "id": "52e0d4ea",
    "metadata": {},
    "source": [
     "In the background, the constructor for ```Attractor``` has computed all of the properties we might need for subsequent computations. These include:\n",
@@ -75,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c5eeda3",
+   "id": "03b9c4b6",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff2a9458",
+   "id": "d00f8498",
    "metadata": {},
    "source": [
     "To view all of the properties of ```Γ``` in a notebook such as this, type ```Γ.``` and hit the tab key"
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "024c529b",
+   "id": "3ae16a04",
    "metadata": {},
    "source": [
     "Here we have defined our own ```Attractor``` from scratch, but there are several presets of popular fractals:\n",
@@ -119,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0874a45",
+   "id": "285cc1fc",
    "metadata": {},
    "source": [
     "We can *sketch* $\\Gamma$, using the following the routine ```sketch_attractor```. This produces a set of points, which can then be visualised in the usual Julian way."
@@ -128,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5db6e15",
+   "id": "661ec75c",
    "metadata": {
     "scrolled": true
    },
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5f7ae85",
+   "id": "0dd3a9f2",
    "metadata": {},
    "source": [
     "### 1. Barycentre rule"
@@ -148,16 +151,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69d14e55",
+   "id": "aad93d52",
    "metadata": {},
    "source": [
+    "This quadrature rule works by partitioning $\\Gamma$ into subsets, such that each subset is no more than $h$ in diameter, for some fixed $h>0$. On each subset, we approximate the integrand by a constant. This is the same principle as the classical midpoint rule. As in the classical case, we can reduce error by choosing a smaller $h$ (assuming the integrand is Lipschitz continuous).\n",
+    "\n",
     "Now let's choose an approximation parameter $h$, then get weights and nodes of the Barycentre Rule. These are $y_\\mathbf{m}$ and $w_\\mathbf{m}$ for $\\mathbf{m}\\in L_h(\\Gamma)$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "540ff911",
+   "id": "9249fd3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "792e2dd7",
+   "id": "b4afb8ab",
    "metadata": {},
    "source": [
     "Let's take a look at where the quadrature nodes sit. We should expect it to resemble our sketch $\\Gamma$ a little."
@@ -176,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a53fa11a",
+   "id": "bf2c7699",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3f990f7",
+   "id": "bb531658",
    "metadata": {},
    "source": [
     "Now suppose we want to evaluate\n",
@@ -198,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9e26257",
+   "id": "a701f0dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37d42155",
+   "id": "bc97ad64",
    "metadata": {},
    "source": [
     "We could evaluate a double integral of the form:\n",
@@ -221,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfd64409",
+   "id": "a50eaaca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3f5dae",
+   "id": "5ca95b6f",
    "metadata": {},
    "source": [
     "### 2. Evaluating integrals of singular Green's functions"
@@ -243,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4af01a5d",
+   "id": "3907245c",
    "metadata": {},
    "source": [
     "Suppose we want to approximate:\n",
@@ -262,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea95c5f2",
+   "id": "6d713765",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,27 +278,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc51089",
+   "id": "25147e73",
    "metadata": {},
    "source": [
     "Now suppose we want to approximate\n",
     "$$\n",
-    "\\frac{\\int_\\Gamma\\int_\\Gamma\\Phi_t(x,y)~\\mathrm{d}\\mathcal{H}^d(y)\\mathrm{d}\\mathcal{H}^d(x)}{(\\mathcal{H}^d(\\Gamma))^2}$$\n",
-    "where\n",
-    "$$\n",
-    "\\Phi_t(x,y) = \\left\\{\\begin{array}{ll}\n",
-    "|x-y|^{-t},&\\quad t>0,\\\\\n",
-    "\\log|x-y|,&\\quad t=0.\n",
-    "\\end{array}\n",
-    "\\right.\n",
-    "$$\n",
+    "\\frac{\\int_\\Gamma\\int_\\Gamma\\Phi_t(x,y)~\\mathrm{d}\\mathcal{H}^d(y)\\mathrm{d}\\mathcal{H}^d(x)}{(\\mathcal{H}^d(\\Gamma))^2}$$.\n",
     "This double integral is singular, so it would be unwise to approach it with the Barycentre rule, as the approximation would be undefined. Fortunately there is a special routine for singular integrals within this class."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6a77a33",
+   "id": "a4b0d18a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fe0cca9",
+   "id": "e5093eb9",
    "metadata": {},
    "source": [
     "Finally, suppose we want to approximate\n",
@@ -325,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c91e375",
+   "id": "02e44ca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d5ae94",
+   "id": "2d846cbc",
    "metadata": {},
    "source": [
     "The optional parameter $c_{\\mathrm{osc}}$ discussed in the paper can be adjusted as an optional parameter ```Cosc```:"
@@ -344,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55971fd2",
+   "id": "8a0e9cd8",
    "metadata": {},
    "outputs": [],
    "source": [
