changed notebooks to the *correct* way of adding this package

--- a/BEM 3D example.ipynb
+++ b/BEM 3D example.ipynb
@@ -13,8 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"src/QuadIFS.jl\")\n",
-    "using .QuadIFS, Plots;"
+    "using IFSintegrals, Plots;"
    ]
   },
   {
