--- a/Imperial-UCL Numerics seminar.ipynb
+++ b/Imperial-UCL Numerics seminar.ipynb
@@ -10,14 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4b206365",
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"src/QuadIFS.jl\")\n",
-    "using .QuadIFS\n",
-    "using Plots, LaTeXStrings"
+    "using IFSintegrals, Plots, LaTeXStrings"
    ]
   },
   {
