--- a/Quadrature example.ipynb
+++ b/Quadrature example.ipynb
@@ -27,8 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"src/QuadIFS.jl\")\n",
-    "using .QuadIFS, Plots;"
+    "using IFSintegrals, Plots;"
    ]
   },
   {
@@ -77,22 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "03b9c4b6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: Γ not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: Γ not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[2]:1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "println(\"d = \", Γ.Hausdorff_dimension)\n",
     "println(\"diam(Γ) = \", Γ.diameter)\n",
@@ -347,19 +334,27 @@
    "source": [
     "Ih = singular_elliptic_double_integral(Γ, k, h; Cosc=1.5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8a818fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.0",
+   "display_name": "Julia 1.7.0",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.0"
+   "version": "1.7.0"
   }
  },
  "nbformat": 4,
