--- a/BEM Cantor set example.ipynb
+++ b/BEM Cantor set example.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"src/QuadIFS.jl\")\n",
-    "using .QuadIFS, Plots;"
+    "using IFSintegrals, Plots;"
    ]
   },
   {
@@ -3289,15 +3288,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.0",
+   "display_name": "Julia 1.7.0",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.3.0"
+   "version": "1.7.0"
   }
  },
  "nbformat": 4,
