Tiny change to quad notebook

--- a/Quadrature example.ipynb
+++ b/Quadrature example.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "The ideas presented in this tutorial are all based on the work of [this paper](http://arxiv.org/abs/2112.11793).\n",
     "\n",
-    "In $\\S1$ of this tutorial we will focus on smooth $f$, and in $\\S2$ weakly singular $f$ will be demonnstrated. But first, let's understand some basic principles of this Julia toolbox. Until $\\S3$, we will focus on the case where $\\mu:=\\mathcal{H}^d|_\\Gamma/\\mathcal{H}^d(\\Gamma)$, etc."
+    "In $\\S1$ of this tutorial we will focus on smooth $f$, and in $\\S2$ weakly singular $f$ will be demonstrated. But first, let's understand some basic principles of this Julia toolbox. Until $\\S3$, we will focus on the case of Hausdorff measure, where $\\mu=\\mathcal{H}^d|_\\Gamma/\\mathcal{H}^d(\\Gamma)$, etc."
    ]
   },
   {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "454745e5",
+   "id": "61984e05",
    "metadata": {},
    "source": [
     "### 3. More general measures\n",
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8a610a",
+   "id": "d8bc50ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b48820db",
+   "id": "2d8f8d39",
    "metadata": {},
    "source": [
     "The following command creates the same attractor as at the top of this notebook, but it is now equipped with the more general measure $\\mu$, rather than the default Hausdorff measure."
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "529f0fa6",
+   "id": "f6bb56a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "258786de",
+   "id": "fc466c51",
    "metadata": {},
    "source": [
     "The presets behave similarly, for example:"
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fb4c286",
+   "id": "1dc1e766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c91bc03f",
+   "id": "603cc86f",
    "metadata": {},
    "source": [
     "And now all of the usual commands work, for example:"
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ce618a6",
+   "id": "e990ee31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98551dc9",
+   "id": "9b10ec68",
    "metadata": {},
    "source": [
     "The one command that does not fit within this framework is evaluation of the double integral\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfe9d5c6",
+   "id": "c1b68e0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "748793ad",
+   "id": "e320d480",
    "metadata": {},
    "source": [
     "Note that the first measure $\\mu_1$ is the one which was assigned to $\\Psi$ when it was constructed. And the order of the measures does not matter, as the integrand is symmetric."
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4b65d0d",
+   "id": "96c6638e",
    "metadata": {},
    "outputs": [],
    "source": []
