made notebook to test against

--- a/gauss quad prototyping/Explanation and function sketches.ipynb
+++ b/gauss quad prototyping/Explanation and function sketches.ipynb
@@ -15,6 +15,9 @@
    "id": "1a1e53e0",
    "metadata": {},
    "source": [
+    "# IMPORTANT NOTICE\n",
+    "This was the original prototype for the code. There are a few bugs in here, which were removed in ```Jacobi_matrices.jl```\n",
+    "\n",
     "# Lemma 1"
    ]
   },
@@ -42,22 +45,22 @@
     "and then assuming we have the coefficients for lower $n$'s, we can write\n",
     "$$\n",
     "\\begin{align}\n",
-    "r_np_n(\\phi_i(x)) &= \\left((\\rho_ix+\\delta_i)-A_{n-1}\\right)p_{n-1}(\\phi_i(x)) - r_{n-1}p_{n-2}(\\phi_i(x))\\\\\n",
-    " &= \\left(\\rho_ix+\\delta_i-A_{n-1}\\right)\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}p_\\ell(x) - r_{n-1}\\sum_{\\ell=0}^{n-2}\\Gamma_{i,\\ell}^{n-2}p_\\ell(x)\\\\\n",
-    " &= \\left(\\delta_i-A_{n-1}\\right)\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}p_\\ell(x) +\\rho_ix\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}p_\\ell(x) - r_{n-1}\\sum_{\\ell=0}^{n-2}\\Gamma_{i,\\ell}^{n-2}p_\\ell(x)\n",
+    "r_np_n(\\phi_i(x)) &= \\left((\\delta_ix+\\beta_i)-A_{n-1}\\right)p_{n-1}(\\phi_i(x)) - r_{n-1}p_{n-2}(\\phi_i(x))\\\\\n",
+    " &= \\left(\\delta_ix+\\beta_i-A_{n-1}\\right)\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}p_\\ell(x) - r_{n-1}\\sum_{\\ell=0}^{n-2}\\Gamma_{i,\\ell}^{n-2}p_\\ell(x)\\\\\n",
+    " &= \\left(\\beta_i-A_{n-1}\\right)\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}p_\\ell(x) +\\delta_ix\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}p_\\ell(x) - r_{n-1}\\sum_{\\ell=0}^{n-2}\\Gamma_{i,\\ell}^{n-2}p_\\ell(x)\n",
     "\\end{align}\n",
     "$$\n",
     "and then taking inner products gives\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\left(r_np_n\\circ\\phi_i,p_j\\right) &= \\left(\\left(\\delta_i-A_{n-1}\\right)\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}p_\\ell(x) +\\rho_ix\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}p_\\ell(x) - r_{n-1}\\sum_{\\ell=0}^{n-2}\\Gamma_{i,\\ell}^{n-2}p_\\ell(x),p_j(x)\\right)\\\\\n",
-    "&=\\left(\\delta_i-A_{n-1}\\right)\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}(p_\\ell,p_j) +\\rho_i\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}(xp_\\ell,p_j) - r_{n-1}\\sum_{\\ell=0}^{n-2}\\Gamma_{i,\\ell}^{n-2}(p_\\ell,p_j).\\\\\n",
+    "\\left(r_np_n\\circ\\phi_i,p_j\\right) &= \\left(\\left(\\delta_i-A_{n-1}\\right)\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}p_\\ell(x) +\\delta_ix\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}p_\\ell(x) - r_{n-1}\\sum_{\\ell=0}^{n-2}\\Gamma_{i,\\ell}^{n-2}p_\\ell(x),p_j(x)\\right)\\\\\n",
+    "&=\\left(\\beta_i-A_{n-1}\\right)\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}(p_\\ell,p_j) +\\delta_i\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}(xp_\\ell,p_j) - r_{n-1}\\sum_{\\ell=0}^{n-2}\\Gamma_{i,\\ell}^{n-2}(p_\\ell,p_j).\\\\\n",
     "\\end{align}\n",
     "$$\n",
     "Now assuming that $j\\leq n-2$, we can write\n",
     "$$\n",
     "\\begin{align}\n",
-    "r_n\\left(p_n\\circ\\phi_i,p_j\\right) =\\left(\\delta_i-A_{n-1}\\right)\\Gamma_{i,j}^{n-1} +\\rho_i\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}(p_\\ell(x)x,p_j(x)) - r_{n-1}\\Gamma_{i,j}^{n-2}.\n",
+    "r_n\\left(p_n\\circ\\phi_i,p_j\\right) =\\left(\\beta_i-A_{n-1}\\right)\\Gamma_{i,j}^{n-1} +\\delta_i\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}(p_\\ell(x)x,p_j(x)) - r_{n-1}\\Gamma_{i,j}^{n-2}.\n",
     "\\end{align}\n",
     "$$\n",
     "Now focus on $(xp_\\ell,p_j)$. There are four cases, which follow by orthogonality:\n",
@@ -71,12 +74,12 @@
     "$$\n",
     "The cases for $j=n-1$ follows similarly, removing terms as required. For $j=n$, we have\n",
     "$$\n",
-    "r_n\\left(p_n\\circ\\phi_i,p_n\\right) = \\rho_i\\Gamma_{i,n-1}^{n-1}(xp_{n-1},p_n)\n",
+    "r_n\\left(p_n\\circ\\phi_i,p_n\\right) = \\delta_i\\Gamma_{i,n-1}^{n-1}(xp_{n-1},p_n)\n",
     "$$\n",
     "\n",
-    "we have $r_n\\left(p_n\\circ\\phi_i,p_n\\right) = \\rho_i\\Gamma^{n-1}_{i,n-1}r_n$, hence\n",
+    "we have $r_n\\left(p_n\\circ\\phi_i,p_n\\right) = \\delta_i\\Gamma^{n-1}_{i,n-1}r_n$, hence\n",
     "$$\n",
-    "\\left(p_n\\circ\\phi_i,p_n\\right) = \\rho_i\\Gamma^{n-1}_{i,n-1}\n",
+    "\\left(p_n\\circ\\phi_i,p_n\\right) = \\delta_i\\Gamma^{n-1}_{i,n-1}\n",
     "$$\n",
     "perhaps this is what is meant by _in passage_ in the proof of Lemma 1. But the $r_n$ term is needed for lower $j$, as we must divide through by it, and it won't cancel so neatly."
    ]
@@ -95,12 +98,12 @@
     "\n",
     "In the above, we could equivalently write\n",
     "$$\n",
-    "\\left(\\tilde{p}_n\\circ\\phi_i,\\tilde{p}_n\\right) = \\rho_i\\Gamma_{i,n-1}^{n-1}\\frac{(xp_{n-1},\\tilde{p}_n)}{(\\tilde{p}_n,\\tilde{p}_n)} = \\rho_i\\Gamma^{n-1}_{i,n-1},\n",
+    "\\left(\\tilde{p}_n\\circ\\phi_i,\\tilde{p}_n\\right) = \\delta_i\\Gamma_{i,n-1}^{n-1}\\frac{(xp_{n-1},\\tilde{p}_n)}{(\\tilde{p}_n,\\tilde{p}_n)} = \\delta_i\\Gamma^{n-1}_{i,n-1},\n",
     "$$\n",
     "and\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\left(\\tilde{p}_n\\circ\\phi_i,p_j\\right) =\\left(\\delta_i-A_{n-1}\\right)\\Gamma_{i,j}^{n-1} +\\rho_i\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}(p_\\ell(x)x,p_j(x)) - r_{n-1}\\Gamma_{i,j}^{n-2},\n",
+    "\\left(\\tilde{p}_n\\circ\\phi_i,p_j\\right) =\\left(\\delta_i-A_{n-1}\\right)\\Gamma_{i,j}^{n-1} +\\delta_i\\sum_{\\ell=0}^{n-1}\\Gamma_{i,\\ell}^{n-1}(p_\\ell(x)x,p_j(x)) - r_{n-1}\\Gamma_{i,j}^{n-2},\n",
     "\\end{align}\n",
     "$$\n",
     "so the process in the above block can be used to determine coefficients which don't involve $r_n$. It would have been much simpler to write\n",
