fixed r_n for n=1, next: A_n

--- a/gauss quad prototyping/manual computatation of recurrence coefficients.ipynb
+++ b/gauss quad prototyping/manual computatation of recurrence coefficients.ipynb
@@ -229,23 +229,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "362a5a2f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.24999999999999994"
+       "0.35355339059327373"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r_1 = w'*(p_1.(x).*x.*p_0.(x))"
+    "r_1 = w'*(p_1.(x).*x.*p_0.(x))/norm_(p_1)/norm_(p_0)"
    ]
   },
   {
@@ -292,45 +292,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
+   "id": "54a9ad64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "norm_ (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm_(f) = sqrt(w'*(f.(x).*f.(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4675a253",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15811388300841883"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm_(p_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "4ae7daaa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.1666666666666667"
+       "-0.3333333333333343"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "s₁(x) = sim_map(Γ.IFS[1],x)\n",
-    "tildeΓ¹₁₀ = w'*(r_1*p_1.(s₁.(x)) .* p_0.(x))"
+    "tildeΓ¹₁₀ = w'*(r_1*p_1.(s₁.(x)) .* p_0.(x))/norm_(p_1)/norm_(p_0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "268d45f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.16666666666666619"
+       "0.3333333333333324"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tildeΓ¹₁₁ = w'*(p_1.(s₁.(x)) .* p_1.(x)) # I think there is rₙ/rₙ hidden in here"
+    "tildeΓ¹₁₁ = w'*(p_1.(s₁.(x)) .* p_1.(x))/norm_(p_1)/norm_(p_1) # I think there is rₙ/rₙ hidden in here"
    ]
   },
   {
