Fixed bug found by andrea in Quad 1

--- a/examples/Quadrature example 1.ipynb
+++ b/examples/Quadrature example 1.ipynb
@@ -60,7 +60,7 @@
     "    Similarity(ρ,[(1-ρ)/2,sqrt(3)*(1-ρ)/2])\n",
     "    Similarity(ρ,[(1-ρ)/2,(1-ρ)/(2*sqrt(3))])\n",
     "]\n",
-    "Γ = Attractor(IFS)"
+    "Γ = InvariantMeasure(IFS);"
    ]
   },
   {
@@ -372,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ψ = Attractor(IFS, weights=μ)"
+    "Ψ = InvariantMeasure(IFS, weights=μ)"
    ]
   },
   {
@@ -444,14 +444,6 @@
    "source": [
     "Note that the first measure $\\mu_1$ is the one which was assigned to $\\Psi$ when it was constructed. And the order of the measures does not matter, as the integrand is symmetric."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96c6638e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
