Fixed 3D notbeook syntax

--- a/examples/BEM 3D example.ipynb
+++ b/examples/BEM 3D example.ipynb
@@ -4241,7 +4241,7 @@
     }
    ],
    "source": [
-    "draw(Γ)"
+    "plot(Γ)"
    ]
   },
   {
@@ -9373,7 +9373,7 @@
    "source": [
     "heatmap(x₁,x₂,real(u.(X)), aspect_ratio = 1, \n",
     "    title=\"Total field\", legend=true, c = :thermal)\n",
-    "draw!(Γ,color = \"white\", markersize=0.5)"
+    "plot!(Γ,color = \"white\", markersize=0.5)"
    ]
   },
   {
