Generalised far-field pattern

--- a/examples/BEM Cantor set example.ipynb
+++ b/examples/BEM Cantor set example.ipynb
@@ -85,7 +85,7 @@
     "x₁ = -1:h□:2\n",
     "x₂ = -1:h□:1\n",
     "X = [[x₁_,x₂_] for x₁_∈x₁, x₂_∈x₂]\n",
-    "Sₖϕₕ = single_layer_potential(ϕₕ,k)\n",
+    "Sₖϕₕ = SingleLayerPotentialHelmholtz(ϕₕ,k)\n",
     "uˢ(x) = -Sₖϕₕ(x)\n",
     "uᵗ = uⁱ.(X) + uˢ.(X);"
    ]
